// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Labeled renders description without headline class 1`] = `
<div
  className="labeled undefined"
>
  <div>
    <span>
      foo bar baz
    </span>
  </div>
  <div
    className="description"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Hello</p>
",
      }
    }
    data-unit="markdown:full"
  />
</div>
`;

exports[`Labeled renders title with headline class 1`] = `
<div
  className="labeled undefined"
>
  <div
    className="headline"
  >
    <span
      className="caption title"
    >
      Hello
    </span>
  </div>
  <div>
    <span>
      foo bar baz
    </span>
  </div>
</div>
`;

exports[`Labeled renders tooltip with headline class 1`] = `
<div
  className="labeled undefined"
>
  <div
    className="headline"
  >
    <div
      className="hint"
    >
      <div
        className="tooltip"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <div
          className="tool"
          data-unit="tooltip:title"
          onClickCapture={[Function]}
        >
          <button
            aria-controls="tooltip-1"
            aria-describedby="tooltip-1"
            className="info sm"
            data-unit="button:info:link"
            onClick={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="icon icon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"36\\" height=\\"36\\" viewBox=\\"0 0 36 36\\"><path d=\\"M18 28c5.523 0 10-4.477 10-10S23.523 8 18 8 8 12.477 8 18s4.477 10 10 10zm0 2c-6.627 0-12-5.373-12-12S11.373 6 18 6s12 5.373 12 12-5.373 12-12 12z\\"/><path d=\\"M17 17.003A.999.999 0 0118 16c.552 0 1 .438 1 1.003v4.994A.999.999 0 0118 23c-.552 0-1-.438-1-1.003v-4.994zM17 12h2v2h-2v-2z\\"/></svg>",
                }
              }
              data-unit="icon"
              onClick={[Function]}
              onError={[Function]}
            />
            
          </button>
        </div>
        <div
          aria-live="assertive"
          className="tip top left info"
          id="tooltip-1"
          role="tooltip"
        >
          <div
            className="activeZone"
          >
            <div
              className="contents"
            >
              <div
                className="container sm"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Подсказка</p>
",
                  }
                }
                data-unit="markdown:full"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <span>
      foo bar baz
    </span>
  </div>
</div>
`;
